kubernetes/templates/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shirts4mike
  labels:
    app: shirts4mike
    tier: frontend
spec:
  strategy:
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: shirts4mike
      tier: frontend
  template:
    metadata:
      labels:
        app: shirts4mike
        tier: frontend
    spec:
      imagePullSecrets:
      - name: treehousedeployer
      containers:
      - name: shirts4mike
        image: treehouse/shirts4mike:latest
        imagePullPolicy: Always
        ports:
        - name: httpd
          containerPort: 80
        livenessProbe:
          tcpSocket:
            port: httpd
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: httpd
            path: /index.php
          initialDelaySeconds: 15
          periodSeconds: 30

---
